Improved addBook method